src/LOG
g++ -O3 -std=c++11 -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -Wall  log-recorder.cpp main.cpp common-functions.cpp io-functions.cpp sysclock.cpp cluster.cpp node.cpp -lpthread core.cpp job.cpp scheduler.cpp -o ../bin/scheduler
In file included from scheduler.h:5:0,
                 from cluster.h:9,
                 from main.cpp:4:
policy.h:21:8: error: variable ‘policy global_policy’ has initializer but incomplete type
 policy global_policy = NULL;
        ^~~~~~~~~~~~~
In file included from scheduler.h:5:0,
                 from cluster.h:9,
                 from cluster.cpp:1:
policy.h:21:8: error: variable ‘policy global_policy’ has initializer but incomplete type
 policy global_policy = NULL;
        ^~~~~~~~~~~~~
In file included from scheduler.h:5:0,
                 from scheduler.cpp:1:
policy.h:21:8: error: variable ‘policy global_policy’ has initializer but incomplete type
 policy global_policy = NULL;
        ^~~~~~~~~~~~~
scheduler.cpp: In member function ‘void scheduler::manage_nodes_state()’:
scheduler.cpp:28:45: error: no matching function for call to ‘policy::manage_node_state(std::vector<node*>::iterator&)’
         current_policy->manage_node_state(it);
                                             ^
In file included from scheduler.h:5:0,
                 from scheduler.cpp:1:
policy.h:29:18: note: candidate: virtual void policy::manage_node_state(node*)
     virtual void manage_node_state(node * n) = 0;
                  ^~~~~~~~~~~~~~~~~
policy.h:29:18: note:   no known conversion for argument 1 from ‘std::vector<node*>::iterator {aka __gnu_cxx::__normal_iterator<node**, std::vector<node*> >}’ to ‘node*’
scheduler.cpp: In member function ‘void scheduler::deploy_jobs(uint64_t)’:
scheduler.cpp:59:58: error: ‘class scheduler’ has no member named ‘jobs_set’
         for(std::multiset<job *>::iterator jobit = this->jobs_set->begin() ; jobit != this->jobs_set->end(); ++jobit){
                                                          ^~~~~~~~
scheduler.cpp:59:93: error: ‘class scheduler’ has no member named ‘jobs_set’
         for(std::multiset<job *>::iterator jobit = this->jobs_set->begin() ; jobit != this->jobs_set->end(); ++jobit){
                                                                                             ^~~~~~~~
scheduler.cpp:78:24: error: ‘class scheduler’ has no member named ‘jobs_set’
             it = this->jobs_set->begin();
                        ^~~~~~~~
scheduler.cpp:80:19: error: ‘class scheduler’ has no member named ‘jobs_set’
             this->jobs_set->erase(it);
                   ^~~~~~~~
scheduler.cpp:87:31: error: ‘class scheduler’ has no member named ‘jobs_set’
         job * jobit = (*this->jobs_set->begin());
                               ^~~~~~~~
scheduler.cpp:93:23: error: ‘class scheduler’ has no member named ‘jobs_set’
                 this->jobs_set->erase(this->jobs_set->begin());
                       ^~~~~~~~
scheduler.cpp:93:45: error: ‘class scheduler’ has no member named ‘jobs_set’
                 this->jobs_set->erase(this->jobs_set->begin());
                                             ^~~~~~~~
Makefile:9: recipe for target 'scheduler' failed
make: *** [scheduler] Error 1
